# blazingly-fast

./: Cargo.toml
client/: package-lock.json  package.json
client-main/: package.json
client-main/src/: App.css  App.jsx
client/app/: layout.tsx  page.tsx
db/: init.sql
server/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
server/src/: main.rs  routes.rs
src/: main.rs  routes.rs
url-fe-1/: package-lock.json
