[package]
name = "blazingly-fast"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "chrono" ] }
base64 = "0.21"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }